<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_search">Search</string>
    <string name="action_add">Add Challenge</string>
    <string name="action_list">Categories</string>

 	<string name="ident">Id</string>
	<string name="title">Title</string>
	<string name="tags">Category</string>
	<string name="submit">Submit</string>
	<string name="raz">reset</string>
	<string name="show">show all</string>
	
	<string name="AddSubject">New Subject</string>
    
</resources>
