<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projecttestsqlite.MainActivity$PlaceholderFragment" >

	<EditText 
	    android:id="@+id/ident"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     android:ems="5"
	    android:hint="@string/ident">
		<requestFocus />
	</EditText>

	<EditText 
	    android:id="@+id/title"
	   	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/ident"
	    android:hint="@string/title" />
	
	<EditText 
	    android:id="@+id/tags"
	   	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/title"
	    android:hint="@string/tags" />

	<EditText
	    android:id="@+id/content"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/title"
	    android:layout_centerHorizontal="true"
	    android:ems="20"
	    android:lines="15"
	    android:inputType="textMultiLine" >

	 
	</EditText>

	<LinearLayout
	    android:id="@+id/buttons"
	   	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true" >
		
		<Button 
		    android:id="@+id/raz"
	   	   	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:text="@string/raz" />
		
		<Button 
		    android:id="@+id/submit"
	   	   	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:text="@string/submit" />
			
	</LinearLayout>
	
</RelativeLayout>
